--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     compatibilitycheck: null,
     backgroundColor: "#222C36",
     splashStyle: "Light",
-    dataUrl: "Release/Builds.data",
-    codeUrl: "Release/Builds.js",
-    asmUrl: "Release/Builds.asm.js",
-    memUrl: "Release/Builds.mem",
+    dataUrl: "Release/BossDesign.data",
+    codeUrl: "Release/BossDesign.js",
+    asmUrl: "Release/BossDesign.asm.js",
+    memUrl: "Release/BossDesign.mem",
   };
 </script>
 <script src="Release/UnityLoader.js"></script>
